# aceradio

./: .copywrite.hcl  .editorconfig  AceStepWorker.cpp  AceStepWorker.h  AdvancedSettingsDialog.cpp  AdvancedSettingsDialog.h  AdvancedSettingsDialog.ui  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  SongDialog.cpp  SongDialog.h  SongDialog.ui  SongItem.h  SongListModel.cpp  SongListModel.h  aceradio.desktop  main.cpp  test_compilation.cpp
.github/workflows/: build.yml
res/: resources.qrc
src/: AceStepWorker.cpp  AceStepWorker.h  AdvancedSettingsDialog.cpp  AdvancedSettingsDialog.h  AdvancedSettingsDialog.ui  AudioPlayer.cpp  AudioPlayer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SongDialog.cpp  SongDialog.h  SongDialog.ui  SongItem.cpp  SongItem.h  SongListModel.cpp  SongListModel.h  clickableslider.cpp  clickableslider.h  elidedlabel.cpp  elidedlabel.h  main.cpp
